cmake_minimum_required(VERSION 3.10)
project(cglm C)
set(CMAKE_C_STANDARD 99)
file(GLOB SOURCES "src/*.c" "include/*.h")
if (UNIX)
    get_filename_component(dllmainfullpath ${CMAKE_CURRENT_SOURCE_DIR}/src/dllmain.c ABSOLUTE)
    list(REMOVE_ITEM SOURCES "${dllmainfullpath}")
endif()
add_library(cglm STATIC ${SOURCES})
